--- a/BACKEND/script/.env
+++ b/BACKEND/script/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=test123
-DB_NAME=books
+DB_PASSWORD=123456789
+DB_NAME=uzytkownicy
 
 PORT=3001
